--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,8 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "target": "es2022",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "module": "es2020",
+    "target": "es2020",
+    "lib": ["dom", "dom.iterable", "esnext", "es2020"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -23,9 +19,7 @@
       }
     ],
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]
     },
     "sourceMap": true
   },
@@ -37,7 +31,5 @@
     "app/lib/placeholder-data.js",
     "scripts/seed.js"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
